--- a/Muza.WebAPI/appsettings.json
+++ b/Muza.WebAPI/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=MuzaDb;user=sa;Password=Coffee@123;"
+  }
 }
